plugins {
    id'java'
    id'application'
    id'com.github.johnrengelman.shadow' version '6.0.0'
}
mainClassName  = 'rode.Main'
version '1.0'
project.targetCompatibility = 15

task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean

repositories {
    jcenter()
}

dependencies {
    implementation 'net.dv8tion:JDA:4.2.0_223'

    // https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver
    implementation 'org.mongodb:mongodb-driver-legacy:4.0.5'
    /// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'



    // https://mvnrepository.com/artifact/org.mongodb/bson
    implementation 'org.mongodb:bson:4.2.0-beta1'

// https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    // https://mvnrepository.com/artifact/org.knowm.xchart/xchart
    compile group: 'org.knowm.xchart', name: 'xchart', version: '3.6.6'
// https://mvnrepository.com/artifact/jfree/jfreechart
    compile group: 'jfree', name: 'jfreechart', version: '1.0.13'

    implementation 'io.github.cdimascio:java-dotenv:5.2.2'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    implementation 'org.projectlombok:lombok:1.18.16'

    // https://mvnrepository.com/artifact/org.reflections/reflections
    compile 'org.reflections:reflections:0.9.11'


}

compileJava.options.encoding = 'UTF-8'